# dotfiles-eww-new

./: .gitignore  CONFIG-GUIDE.md  IMPROVEMENTS.md  QUICK-START.md  README.md  REFACTORING-SUMMARY.md  Taskfile.yml  config.yuck  eww.scss  eww.yuck  undef-vars.py
rust-applets/eww-microphone-mixer/: Cargo.toml
rust-applets/eww-microphone-mixer/src/: main.rs
rust-applets/eww-music-daemon/: Cargo.toml
rust-applets/eww-music-daemon/src/: main.rs
rust-applets/eww-volume-mixer/: Cargo.toml
rust-applets/eww-volume-mixer/src/: main.rs
scripts/: battery.sh  bluetooth.sh  brightness.sh  keyboard.sh  microphone-commands.sh  microphone-daemon.py  microphone-listener.sh  microphone-manager.sh  microphone.sh  mixer-daemon-manager.sh  mixer-fast-listener.sh  mixer-slow-listener.sh  music-control.sh  music-daemon.py  network.sh  notifications.sh  pomodoro.py  pomodoro.sh  start-eww.sh  switch-theme.sh  toggle-dashboard.sh  toggle-volume-mixer.sh  updates.sh  user-info.sh  volume-commands.sh  volume-daemon.py  volume-listener.sh  volume-manager.sh  volume-mixer-cmd.sh  volume.sh  weather.sh  window-title.sh  workspaces.sh
styles/: _badge.scss  _battery.scss  _bluetooth.scss  _brightness.scss  _button.scss  _card.scss  _dashboard.scss  _icon.scss  _keyboard.scss  _layouts.scss  _microphone-mixer.scss  _microphone.scss  _modifiers.scss  _network.scss  _notifications.scss  _pomodoro.scss  _reset.scss  _scales.scss  _text.scss  _theme-ayu-dark.scss  _theme-ayu-mini.scss  _theme-cyber-blue-sharp.scss  _theme-cyber-mini.scss  _time.scss  _updates.scss  _volume-mixer.scss  (+5 more)
(+27 files in other folders)
