[package]
name = "eww-microphone-mixer"
version = "0.1.0"
edition = "2024"

[dependencies]
libpulse-binding = "2.28"
libpulse-glib-binding = "2.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
libc = "0.2"
