[package]
name = "eww-music-daemon"
version = "0.2.0"
edition = "2024"

[dependencies]
mpris = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
md5 = "0.7"
dirs = "5.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
