[package]
name = "eww-volume-mixer"
version = "0.1.0"
edition = "2021"

[dependencies]
libpulse-binding = "2.28"
libpulse-glib-binding = "2.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
